--- a/blogpost.html
+++ b/blogpost.html
@@ -5,7 +5,14 @@
     <link rel= "stylesheet" href="css/estilos.css" />
 </head>
     <body>
-    <h1>Aqui vamos a hacer un blog post</h1>
-    <p>Y este es el parrafo de inicio</p>
-    </body>
+        <iv id- "container">/iv>
+            <div id- "post">
+                <h1>Este es el titulo
+                 atractivo ee interesante del
+                 <p> este es el parrafo de inicio de donde vamos 
+                 a explicar las cosas increibles que se 
+                 pueden hacer con ramas</p>
+                 </div>
+             </div>
+        </body>
 </html>
