Estructura inicial de la cabecera  Please enter the commit message for your changes. Lines starting

--- a/blogpost.html
+++ b/blogpost.html
@@ -5,7 +5,9 @@
     <link rel= "stylesheet" href="css/estilos.css" />
 </head>
     <body>
-        <iv id- "container">/iv>
+        <div id= "container">
+            <div id= "Cabecera"
+            cabecera
             <div id- "post">
                 <h1>Este es el titulo
                  atractivo ee interesante del
