--- a/blogpost.html
+++ b/blogpost.html
@@ -6,8 +6,11 @@
 </head>
     <body>
         <div id= "container">
-            <div id= "Cabecera"
-            cabecera
+            <div id= "Cabecera">
+                Hyperblog
+                <span id="tagline">Tu blog de confianza
+                </span
+                </div>
             <div id- "post">
                 <h1>Este es el titulo
                  atractivo ee interesante del
